[gd_scene load_steps=12 format=3 uid="uid://c5jfsgi3a8nm7"]

[ext_resource type="Script" path="res://PlayerMV0.1.gd" id="1_3y4hl"]
[ext_resource type="PackedScene" uid="uid://qhgtq3nfoxo1" path="res://Game Components/interaction_area.tscn" id="2_2uugx"]
[ext_resource type="MeshLibrary" uid="uid://dr7bma8eecl8w" path="res://meshlibrary.meshlib" id="2_tlogv"]
[ext_resource type="PackedScene" uid="uid://umopr4fi0k0d" path="res://mob.tscn" id="4_c8jct"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gwcmq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e56ij"]
albedo_color = Color(1, 0.34902, 1, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4kvxw"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pvjdb"]
height = 0.749678
radius = 1.45147

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jgwid"]
albedo_color = Color(1, 1, 0, 1)
metallic = 0.57

[sub_resource type="TorusMesh" id="TorusMesh_a5bdp"]
material = SubResource("StandardMaterial3D_jgwid")

[sub_resource type="BoxShape3D" id="BoxShape3D_r5n6j"]

[node name="BSC" type="Node3D"]

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
disable_mode = 2
script = ExtResource("1_3y4hl")
metadata/_edit_group_ = true

[node name="Camera3D" type="Camera3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 8, 5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="player"]
mesh = SubResource("CapsuleMesh_gwcmq")
surface_material_override/0 = SubResource("StandardMaterial3D_e56ij")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
shape = SubResource("CapsuleShape3D_4kvxw")

[node name="InteractionComps" type="Node3D" parent="player"]

[node name="InteractionArea" type="Area3D" parent="player/InteractionComps"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/InteractionComps/InteractionArea"]
shape = SubResource("CylinderShape3D_pvjdb")

[node name="InteracionLabel" type="Label3D" parent="player/InteractionComps"]
transform = Transform3D(1, 0, 0, 0, 0.575505, 0.817798, 0, -0.817798, 0.575505, 0, 4.05232, 2.5271)
text = "Teste"

[node name="InteractionArea" parent="." instance=ExtResource("2_2uugx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.62537, 0.882082, -8.44354)
int_default = "Interactable"
int_type = "print_text"
int_active = "Works!"

[node name="GFloor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
use_collision = true
size = Vector3(22, 2, 22)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 8, 6, 0)
shadow_enabled = true

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(0.901221, 0.370891, -0.224144, -0.433013, 0.75, -0.5, -0.0173376, 0.547668, 0.836516, -8, 2, 4)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("TorusMesh_a5bdp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_r5n6j")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_tlogv")
cell_size = Vector3(1, 2, 1)
data = {
"cells": PackedInt32Array(65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 0, 0, 3, 0, 0, 3, 65535, 0, 3, 65534, 0, 3, 65533, 0, 4, 65533, 0, 4, 65532, 0, 3, 65532, 0, 2, 65532, 0, 1, 65532, 0, 0, 65532, 0, 65535, 65532, 0, 65534, 65532, 0, 65533, 65532, 0, 65532, 65532, 0, 65531, 65532, 0, 65531, 65533, 0, 65530, 65533, 0, 65530, 65534, 0, 65530, 65535, 0, 65530, 0, 0, 65530, 1, 0, 65530, 2, 0, 65530, 3, 0, 65530, 4, 0, 65531, 5, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 6, 4, 0, 7, 3, 0, 7, 2, 0, 8, 1, 0, 8, 0, 0, 8, 65535, 0, 8, 65534, 0, 8, 65533, 0, 8, 65532, 0, 9, 65531, 0, 9, 65530, 0, 9, 65529, 0, 9, 65528, 0, 8, 65528, 0, 8, 65527, 0, 8, 65526, 0, 7, 65526, 0, 7, 65525, 0, 6, 65525, 0, 5, 65525, 0, 4, 65525, 0, 3, 65525, 0, 2, 65525, 0, 1, 65525, 0, 0, 65525, 0, 65535, 65525, 0, 65534, 65525, 0, 65534, 65526, 0, 65533, 65526, 0, 65532, 65526, 0, 65531, 65526, 0, 65531, 65527, 0, 65530, 65527, 0, 65530, 65528, 0, 65529, 65528, 0, 65529, 65529, 0, 65528, 65529, 0, 65528, 65530, 0, 65527, 65530, 0, 65527, 65531, 0, 65527, 65532, 0, 65526, 65532, 0, 65526, 65533, 0, 65526, 65534, 0, 65525, 65534, 0, 65525, 65535, 0, 65525, 0, 0, 65525, 1, 0, 65525, 2, 0, 65525, 3, 0, 65525, 4, 0, 65525, 5, 0, 65526, 5, 0, 65526, 6, 0, 65526, 7, 0, 65526, 8, 0, 65526, 9, 0, 65527, 9, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65532, 10, 0, 65533, 9, 0, 65534, 9, 0, 65535, 9, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 9, 8, 0, 65530, 10, 0, 65531, 10, 0, 65526, 10, 0, 65525, 10, 0, 65525, 9, 0, 65525, 8, 0, 65525, 7, 0, 65525, 6, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 65525, 65533, 0, 65525, 65532, 0, 65525, 65531, 0, 65525, 65530, 0, 65525, 65529, 0, 65525, 65528, 0, 65525, 65527, 0, 65525, 65526, 0, 65525, 65525, 0, 65526, 65525, 0, 65527, 65525, 0, 65528, 65525, 0, 65529, 65525, 0, 65530, 65525, 0, 65531, 65525, 0, 65532, 65525, 0, 65533, 65525, 0, 65526, 65526, 0, 65526, 65527, 0, 65526, 65528, 0, 65526, 65529, 0, 65526, 65530, 0, 65526, 65531, 0, 65527, 65529, 0, 65527, 65528, 0, 65527, 65527, 0, 65527, 65526, 0, 65528, 65526, 0, 65529, 65526, 0, 65530, 65526, 0, 65529, 65527, 0, 65528, 65527, 0, 65528, 65528, 0, 8, 65525, 0, 9, 65525, 0, 9, 65526, 0, 9, 65527, 0, 10, 10, 0, 10, 9, 0, 10, 8, 0, 10, 7, 0, 10, 6, 0, 10, 5, 0, 10, 4, 0, 10, 3, 0, 10, 2, 0, 10, 1, 0, 11, 1, 0, 11, 0, 0, 11, 65535, 0, 11, 65534, 0, 11, 65533, 0, 11, 65532, 0, 11, 65531, 0, 11, 65530, 0, 11, 65529, 0, 12, 65529, 0, 12, 65528, 0, 12, 65527, 0, 12, 65526, 0, 12, 65525, 0, 13, 65525, 0)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="mob" parent="." instance=ExtResource("4_c8jct")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.30228, 1.37555, 2.46294)

[connection signal="area_entered" from="player/InteractionComps/InteractionArea" to="player" method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="player/InteractionComps/InteractionArea" to="player" method="_on_interaction_area_area_exited"]
